<?xml version="1.0"?>
<package format="3">
  <name>leptrino_rs_ros2</name>
  <version>0.1.0</version>
  <description>A Leptrino driver for ROS 2 in Rust</description>
  <maintainer email="yuki.st16@gmail.com">Yuki Onishi</maintainer>
  <license>Apache 2.0</license>

  <depend>rosidl_default_generators</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclrs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
